logs/sorl-watermark.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sorl'...
Listing './lib/python3.5/site-packages/sorl/thumbnail'...
Listing './lib/python3.5/site-packages/sorl/thumbnail/admin'...
Listing './lib/python3.5/site-packages/sorl/thumbnail/conf'...
Listing './lib/python3.5/site-packages/sorl/thumbnail/engines'...
Listing './lib/python3.5/site-packages/sorl/thumbnail/kvstores'...
Listing './lib/python3.5/site-packages/sorl/thumbnail/management'...
Listing './lib/python3.5/site-packages/sorl/thumbnail/management/commands'...
Listing './lib/python3.5/site-packages/sorl/thumbnail/migrations'...
Listing './lib/python3.5/site-packages/sorl/thumbnail/templatetags'...
Listing './lib/python3.5/site-packages/sorl_thumbnail-12.4.1.dist-info'...
Listing './lib/python3.5/site-packages/sorl_watermark-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/sorl_watermarker'...
Listing './lib/python3.5/site-packages/sorl_watermarker/conf'...
Listing './lib/python3.5/site-packages/sorl_watermarker/engines'...
Compiling './lib/python3.5/site-packages/sorl_watermarker/engines/base.py'...
***   File "./lib/python3.5/site-packages/sorl_watermarker/engines/base.py", line 80
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/engines'...
Compiling './lib/python3.5/site-packages/tests/engines/base_case.py'...
***   File "./lib/python3.5/site-packages/tests/engines/base_case.py", line 66
    print 'Testing ' + option + ': ' + str(value)
                   ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
